# webrotas

./: ANALYSIS_SUMMARY.md  ANALYSIS_SUMMARY_cutter_py.md  COMPLETE_ANALYSIS_SUMMARY.md  Dockerfile  Dockerfile.frontend  WARP.md  docker-compose.yml  pyproject.toml  tile-import-wrapper.sh
avoidzones/: Dockerfile  app.py  requirements.txt
docs/: ANALYSIS_app_py.md  ANALYSIS_cutter_py.md  AVOIDANCE_ZONES.md  AVOID_ZONES_FIX.md  CLIENT_SIDE_AVOID_ZONES_RESEARCH.md  CLIENT_SIDE_IMPLEMENTATION_ROADMAP.md  COMPARISON_CURRENT_VS_PROPOSED.md  DOCKERFILE_OPTIMIZATION.md  EXECUTIVE_SUMMARY.md  FEATURES_ADDED.md  FIXES_APPLIED.md  FIXES_APPLIED_cutter_py.md  LUA_ONLY_APPROACH.md  MEMORY_CRASH_FIX.md  MIGRATION_PYPROJECT.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_1_QUICK_REFERENCE.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_QUICK_REFERENCE.md  RECOMMENDATIONS_remaining_fixes.md  RESUMO_CORRECAO.md  TILE_SERVER_OPTIMIZATION.md  format_raw_md.py
docs/summaries/: RESUMO_SISTEMA_VERSOES_PT.md  VERSION_SYSTEM_IMPLEMENTATION.md  VERSION_SYSTEM_QUICK_REFERENCE.md  WARP_improvements.md  all_fixes_summary.md  critical_bugs_fixed.md  deep_analysis_improvements.md  significant_problems_fixed.md  tile_server_commands_pt.md
frontend/: index.html  styles.css
profiles/: car_avoid.lua
src/webrotas/: app.py  cutter.py  lua_converter.py  version_manager.py
tests/: test_client_side_zones.py  test_version_system.py  validate_phase1.py
